...
    <string name="settings_paired_list_title">Paired phones</string>
    <string name="settings_paired_back">Back</string>
    <string name="settings_phone_rename">Rename</string>
    <string name="settings_phone_rename_a11y">Rename %1$s</string>
    <string name="rename_tv_title">Rename this TV</string>
    <string name="rename_phone_title">Rename paired phone</string>
    <string name="rename_name_label">Name</string>
    <string name="rename_cancel">Cancel</string>
    <string name="rename_save">Save</string>
    <string name="rename_save_failed">Couldn\'t save the name. Try again.</string>
    <string name="settings_open_title">Open when you cast</string>
    <!-- Ship gate G1: if the asleep-TV runs fail, this becomes "Casting opens Flick here". -->
    <string name="settings_open_summary">Casting opens Flick here, even if the TV is asleep</string>
...
